Fix alignment of buttons

--- a/src/SFA.DAS.ApplyService.Web/wwwroot/stylesheets/application.css
+++ b/src/SFA.DAS.ApplyService.Web/wwwroot/stylesheets/application.css
@@ -19,14 +19,13 @@
 }
 
 .govuk-button--looks-like-link {
-  display: block;
+  display: inline-block;
   padding: 0;
   margin: 0;
   border: 0;
   text-decoration: underline;
   background: none;
   box-shadow: none;
-  text-align: left;
   color: #005ea5;
 }
 
@@ -39,7 +38,11 @@
 }
 
 .govuk-button--looks-like-link:focus {
-  background: #ffbf47;
+  outline: 3px solid rgba(0,0,0,0);
+  color: #0b0c0c;
+  background-color: #fd0;
+  box-shadow: 0 -2px #fd0, 0 4px #0b0c0c;
+  text-decoration: none;
 }
 
 .govuk-button--looks-like-link:visited {
